--- a/css/list.css
+++ b/css/list.css
@@ -31,6 +31,35 @@ footer p {
 	margin: 0;
 }
 
+
+.twitch-button {
+	background-color: #9147FF;
+	color: #FFFFFF;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.twitch-button:hover {
+	background-color: #7535CC;
+}
+
+.discord-button {
+	background-color: #5562EA;
+	color: #FFFFFF;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.discord-button:hover {
+	background-color: #7289DA;
+}
+
 .button {
     background-color: #4CAF50;
     color: #FFFFFF;
@@ -41,8 +70,13 @@ footer p {
     cursor: pointer;
 }
   
-  .button:hover {
+.button:hover {
     background-color: #3E8E41;
+}
+
+/* Show dropdown menu on hover */
+.dropdown-hover:hover .dropdown-menu {
+    display: block;
 }
 
 form {
@@ -96,9 +130,4 @@ table th {
 
 table tr:nth-child(even) {
     background-color: #F0F0F0;
-}
-
-/* Show dropdown menu on hover */
-.dropdown-hover:hover .dropdown-menu {
-    display: block;
 }
