--- a/css/custom.css
+++ b/css/custom.css
@@ -40,6 +40,20 @@
     background-color: #3E8E41;
 }
 
+.logout-button {
+    background-color: #ff0000;
+    color: #FFFFFF;
+    padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+}
+  
+.logout-button:hover {
+    background-color: #c21414;
+}
+
 a.popup-link {
     text-decoration: none;
     color: black;
