--- a/css/custom.css
+++ b/css/custom.css
@@ -40,6 +40,20 @@
     background-color: #3E8E41;
 }
 
+.save-button {
+    background-color: #4CAF50;
+    color: #FFFFFF;
+    padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+    font-size: 15px;
+    cursor: pointer;
+}
+  
+.save-button:hover {
+    background-color: #3E8E41;
+}
+
 .logout-button {
     background-color: #ff0000;
     color: #FFFFFF;
