--- a/css/custom.css
+++ b/css/custom.css
@@ -136,3 +136,24 @@ a.popup-link {
     background-image: url('https://cdn.yourlist.online/img/dark-theme.svg');
     background-size: cover;
 }
+
+/* DARK MODE */
+body {
+    transition: background-color 0.3s ease;
+}
+
+.dark-mode body {
+    background-color: #1a1a1a;
+    color: #ffffff
+}
+
+.dark-mode-content {
+    background-color: #ffffff;
+    color: #333333;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.dark-mode .dark-mode-content {
+    background-color: #333333;
+    color: #ffffff;
+}
