--- a/css/custom.css
+++ b/css/custom.css
@@ -160,62 +160,62 @@ body {
     color: #ffffff;
 }
 
-table.dark-mode {
+.dark-mode-table {
     background-color: #444444;
     color: #ffffff;
   }
   
-  table.dark-mode thead,
-  table.dark-mode tbody,
-  table.dark-mode tfoot {
+  .dark-mode-table thead,
+  .dark-mode-table tbody,
+  .dark-mode-table tfoot {
     border: 1px solid #444444;
     background-color: #555555;
   }
   
-  table.dark-mode caption {
+  .dark-mode-table caption {
     padding: 0.5rem 0.625rem 0.625rem;
     font-weight: bold;
   }
   
-  table.dark-mode thead {
+  .dark-mode-table thead {
     background: #666666;
     color: #dddddd;
   }
   
-  table.dark-mode tfoot {
+  .dark-mode-table tfoot {
     background: #555555;
     color: #dddddd;
   }
   
-  table.dark-mode thead tr,
-  table.dark-mode tfoot tr {
+  .dark-mode-table thead tr,
+  .dark-mode-table tfoot tr {
     background: transparent;
   }
   
-  table.dark-mode thead th,
-  table.dark-mode thead td,
-  table.dark-mode tfoot th,
-  table.dark-mode tfoot td {
+  .dark-mode-table thead th,
+  .dark-mode-table thead td,
+  .dark-mode-table tfoot th,
+  .dark-mode-table tfoot td {
     padding: 0.5rem 0.625rem 0.625rem;
     font-weight: bold;
     text-align: left;
   }
   
-  table.dark-mode tbody th,
-  table.dark-mode tbody td {
+  .dark-mode-table tbody th,
+  .dark-mode-table tbody td {
     padding: 0.5rem 0.625rem 0.625rem;
   }
   
-  table.dark-mode tbody tr:nth-child(even) {
+  .dark-mode-table tbody tr:nth-child(even) {
     border-bottom: 0;
     background-color: #666666;
   }
   
-  table.dark-mode.unstriped tbody {
+  .dark-mode-table.unstriped tbody {
     background-color: #555555;
   }
   
-  table.dark-mode.unstriped tbody tr {
+  .dark-mode-table.unstriped tbody tr {
     border-bottom: 1px solid #444444;
     background-color: #555555;
   }
