--- a/css/custom.css
+++ b/css/custom.css
@@ -161,61 +161,120 @@ body {
 }
 
 .dark-mode-table {
-    background-color: #444444;
-    color: #ffffff;
-  }
-  
-  .dark-mode-table thead,
-  .dark-mode-table tbody,
-  .dark-mode-table tfoot {
-    border: 1px solid #444444;
-    background-color: #555555;
-  }
-  
-  .dark-mode-table caption {
-    padding: 0.5rem 0.625rem 0.625rem;
-    font-weight: bold;
-  }
-  
-  .dark-mode-table thead {
-    background: #666666;
-    color: #dddddd;
-  }
-  
-  .dark-mode-table tfoot {
-    background: #555555;
-    color: #dddddd;
-  }
-  
-  .dark-mode-table thead tr,
-  .dark-mode-table tfoot tr {
-    background: transparent;
-  }
-  
-  .dark-mode-table thead th,
-  .dark-mode-table thead td,
-  .dark-mode-table tfoot th,
-  .dark-mode-table tfoot td {
-    padding: 0.5rem 0.625rem 0.625rem;
-    font-weight: bold;
-    text-align: left;
-  }
-  
-  .dark-mode-table tbody th,
-  .dark-mode-table tbody td {
-    padding: 0.5rem 0.625rem 0.625rem;
-  }
-  
-  .dark-mode-table tbody tr:nth-child(even) {
-    border-bottom: 0;
-    background-color: #666666;
-  }
-  
-  .dark-mode-table.unstriped tbody {
-    background-color: #555555;
-  }
-  
-  .dark-mode-table.unstriped tbody tr {
-    border-bottom: 1px solid #444444;
-    background-color: #555555;
-  }
+  background-color: #444444;
+  color: #ffffff;
+}
+
+.dark-mode-table thead,
+.dark-mode-table tbody,
+.dark-mode-table tfoot {
+  border: 1px solid #444444;
+  background-color: #555555;
+}
+
+.dark-mode-table caption {
+  padding: 0.5rem 0.625rem 0.625rem;
+  font-weight: bold;
+}
+
+.dark-mode-table thead {
+  background: #666666;
+  color: #dddddd;
+}
+
+.dark-mode-table tfoot {
+  background: #555555;
+  color: #dddddd;
+}
+
+.dark-mode-table thead tr,
+.dark-mode-table tfoot tr {
+  background: transparent;
+}
+
+.dark-mode-table thead th,
+.dark-mode-table thead td,
+.dark-mode-table tfoot th,
+.dark-mode-table tfoot td {
+  padding: 0.5rem 0.625rem 0.625rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+.dark-mode-table tbody th,
+.dark-mode-table tbody td {
+  padding: 0.5rem 0.625rem 0.625rem;
+}
+
+.dark-mode-table tbody tr:nth-child(even) {
+  border-bottom: 0;
+  background-color: #666666;
+}
+
+.dark-mode-table.unstriped tbody {
+  background-color: #555555;
+}
+
+.dark-mode-table.unstriped tbody tr {
+  border-bottom: 1px solid #444444;
+  background-color: #555555;
+}
+.light-mode-table {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.light-mode-table thead,
+.light-mode-table tbody,
+.light-mode-table tfoot {
+  border: 1px solid #f1f1f1;
+  background-color: #fefefe;
+}
+
+.light-mode-table caption {
+  padding: 0.5rem 0.625rem 0.625rem;
+  font-weight: bold;
+}
+
+.light-mode-table thead {
+  background: #f8f8f8;
+  color: #0a0a0a;
+}
+
+.light-mode-table tfoot {
+  background: #f1f1f1;
+  color: #0a0a0a;
+}
+
+.light-mode-table thead tr,
+.light-mode-table tfoot tr {
+  background: transparent;
+}
+
+.light-mode-table thead th,
+.light-mode-table thead td,
+.light-mode-table tfoot th,
+.light-mode-table tfoot td {
+  padding: 0.5rem 0.625rem 0.625rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+.light-mode-table tbody th,
+.light-mode-table tbody td {
+  padding: 0.5rem 0.625rem 0.625rem;
+}
+
+.light-mode-table tbody tr:nth-child(even) {
+  border-bottom: 0;
+  background-color: #f1f1f1;
+}
+
+.light-mode-table.unstriped tbody {
+  background-color: #fefefe;
+}
+
+.light-mode-table.unstriped tbody tr {
+  border-bottom: 1px solid #f1f1f1;
+  background-color: #fefefe;
+}
