--- a/css/custom.css
+++ b/css/custom.css
@@ -138,9 +138,9 @@ a.popup-link {
 }
 
 /* DARK MODE */
-body {
-    background-color: #ffffff;
-    color: #333333;
+body.dark-mode {
+    background-color: #1a1a1a;
+    color: #ffffff;
     transition: background-color 0.3s ease;
 }
 
