--- a/css/custom.css
+++ b/css/custom.css
@@ -152,6 +152,10 @@ body.dark-mode {
   color: #000000 !important;
 }
 
+.dark-mode label {
+  color: #ffffff;
+}
+
 .dark-mode-content {
     background-color: #ffffff;
     color: #333333;
